--- a/roles/rke2/server/templates/rke2-config.j2
+++ b/roles/rke2/server/templates/rke2-config.j2
@@ -1,8 +1,7 @@
-{% if master %}
-token: {{ cluster_token }}
-{% else %}
-server: https://{{ loadbalancer_address }}:{{ join_cluster_port }}
+{% if master | bool == false %}
+server: https://{{ loadbalancer_addresses[0] }}:{{ join_cluster_port }}
 {% endif %}
+token: {{ cluster_token }}
 tls-san:
 {% for item in loadbalancer_addresses -%}
     - {{ item }}
