--- a/roles/haproxy/templates/haproxy.cfg.j2
+++ b/roles/haproxy/templates/haproxy.cfg.j2
@@ -38,7 +38,7 @@ listen kubernetes-connect-cluster
     mode tcp
     option log-health-checks
     {% for item in groups['control_plane'] -%}
-    server master{{ loop.index }} {{ item }}:{{ join_cluster_port }} check check-ssl verify none inter 10000
+    server {{ index }} {{ item }}:{{ join_cluster_port }} check check-ssl verify none inter 10000
     {% endfor %}
 
 listen kubernetes-apiserver-https
@@ -48,7 +48,7 @@ listen kubernetes-apiserver-https
     timeout client 1m
     timeout server 1m
     {% for item in groups['control_plane'] -%}
-    server master{{ loop.index }} {{ item }}:{{ apiserver_port }} check check-ssl verify none inter 10000
+    server {{ index }} {{ item }}:{{ apiserver_port }} check check-ssl verify none inter 10000
     {% endfor %}
 
 listen cm-acme-http-solver
@@ -63,4 +63,4 @@ listen rancher-https
     option tcplog
     {% for item in groups['k8s'] -%}
     server {{ item }} {{ item }}:443 check check-ssl verify none inter 10000
-    {% endfor -%}
+    {% endfor %}
