--- a/roles/haproxy/templates/haproxy.cfg.j2
+++ b/roles/haproxy/templates/haproxy.cfg.j2
@@ -57,6 +57,7 @@ listen cm-acme-http-solver
     server {{ item }} {{ item }}:80 check
     {% endfor %}
 
+{% if install_rancher -%}
 listen rancher-https
     bind *:443
     mode tcp
@@ -64,3 +65,4 @@ listen rancher-https
     {% for item in groups['k8s'] -%}
     server {{ item }} {{ item }}:443 check check-ssl verify none inter 10000
     {% endfor %}
+{% endif %}
