--- a/roles/haproxy/templates/haproxy.cfg.j2
+++ b/roles/haproxy/templates/haproxy.cfg.j2
@@ -51,18 +51,16 @@ listen kubernetes-apiserver-https
     server {{ item }} {{ item }}:{{ apiserver_port }} check check-ssl verify none inter 10000
     {% endfor %}
 
-listen cm-acme-http-solver
+listen kubernetes-http-services
     bind *:80
     {% for item in groups['k8s'] -%}
     server {{ item }} {{ item }}:80 check
     {% endfor %}
 
-{% if install_rancher -%}
-listen rancher-https
+listen kubernetes-https-services
     bind *:443
     mode tcp
     option tcplog
     {% for item in groups['k8s'] -%}
     server {{ item }} {{ item }}:443 check check-ssl verify none inter 10000
     {% endfor %}
-{% endif %}
