--- a/roles/haproxy/templates/haproxy.cfg.j2
+++ b/roles/haproxy/templates/haproxy.cfg.j2
@@ -18,10 +18,10 @@ defaults
     option                  redispatch
     retries                 3
     timeout http-request    10s
-    timeout queue           1m
-    timeout connect         10s
-    timeout client          1m
-    timeout server          1m
+    timeout queue           5m
+    timeout connect         5m
+    timeout client          5m
+    timeout server          5m
     timeout http-keep-alive 10s
     timeout check           10s
     maxconn                 3000
@@ -45,8 +45,8 @@ listen kubernetes-apiserver-https
     bind *:{{ apiserver_port }}
     mode tcp
     option log-health-checks
-    timeout client 1m
-    timeout server 1m
+    timeout client 10m
+    timeout server 10m
     {% for item in groups['control_plane'] -%}
     server {{ item }} {{ item }}:{{ apiserver_port }} check check-ssl verify none inter 10000
     {% endfor %}
@@ -64,3 +64,11 @@ listen kubernetes-https-services
     {% for item in groups['k8s'] -%}
     server {{ item }} {{ item }}:443 check check-ssl verify none inter 10000
     {% endfor %}
+
+{% for item in groups['k8s_services_nodeport'] -%}
+listen {{ item.name }}-nodeport
+    bind *:{{ item.port }}
+    mode tcp
+    option tcplog
+    server {{ item }} {{ groups['k8s'][0] }}:{{ item.port }} check check-ssl verify none inter 10000
+{% endfor %}
