--- a/roles/haproxy/templates/haproxy.cfg.j2
+++ b/roles/haproxy/templates/haproxy.cfg.j2
@@ -51,13 +51,13 @@ listen kubernetes-apiserver-https
     server {{ item }} {{ item }}:{{ apiserver_port }} check check-ssl verify none inter 10000
     {% endfor %}
 
-listen kubernetes-http-services
+listen kubernetes-ingress-http-services
     bind *:80
     {% for item in groups['k8s'] -%}
     server {{ item }} {{ item }}:80 check
     {% endfor %}
 
-listen kubernetes-https-services
+listen kubernetes-ingress-https-services
     bind *:443
     mode tcp
     option tcplog
@@ -65,10 +65,10 @@ listen kubernetes-https-services
     server {{ item }} {{ item }}:443 check check-ssl verify none inter 10000
     {% endfor %}
 
-{% for item in groups['k8s_services_nodeport'] -%}
+{% for item in k8s_services_nodeport -%}
 listen {{ item.name }}-nodeport
     bind *:{{ item.port }}
     mode tcp
     option tcplog
-    server {{ item }} {{ groups['k8s'][0] }}:{{ item.port }} check check-ssl verify none inter 10000
+    server {{ groups['k8s'][0] }} {{ groups['k8s'][0] }}:{{ item.port }} check
 {% endfor %}
