fix join cluster error

--- a/roles/rke2/server/templates/rke2-config.j2
+++ b/roles/rke2/server/templates/rke2-config.j2
@@ -1,5 +1,5 @@
 {% if master | bool == false %}
-server: https://{{ groups['control_plane'][0] }}:{{ join_cluster_port }}
+server: https://{{ loadbalancer_addresses[0] }}:{{ join_cluster_port }}
 {% endif %}
 token: {{ cluster_token }}
 tls-san:
